[metadata]
name = autonavsim2D
version = 0.0.3
author = Clinton Anani
author_email = kceequan01@gmail.com
description = This project provides a 2D simulation environment designed for the development and testing of path planning algorithms. It offers a flexible and interactive platform for researchers, developers, and hobbyists to experiment with various path planning strategies in a controlled virtual space.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yendiDev/autonavsim2d
project_urls =
    Bug Tracker = https://github.com/yendiDev/autonavsim2d/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
autonavsim2d.utils = assets/*
